# craftify

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bake_blocks.py  download_textures.py  get_test_media.py  requirements.txt
craftify/: __main__.py
craftify/convertors/: convert_frame.py  lamp_convert_frame.py
src/: main.cpp
src/convertors/: convert_frame.cpp  convert_frame.h
src/objects/: baked_block.cpp  baked_block.h  blocks_db.cpp  blocks_db.h
